@@ -1,5 +1,8 @@
 Release Notes
 
+* 2/10/2017
+  * added DBProxyFiltered
+
 * 2/6/2017
   * Protection against undef
 
